1998-11-02  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* client-src/Makefile.am (CLIENT_SCRIPTS): rename to
 	CLIENT_SCRIPTS_OPT, because *_SCRIPTS is interpreted by automake
	* configure.in (CLIENT_SCRIPTS): ditto
	Reported by Thomas Hepper <Thomas.Hepper@icem.de>

	* configure.in (LIBTOOL_M4): no longer defined
	(LIBTOOL_M4_MACRO_DIR): defined assuming CWD is top_srcdir
	* Makefile.am (ACLOCAL_M4_FROM_SRCDIR): relative to srcdir
	(ACLOCAL_M4): defined and created using ACLOCAL_M4_FROM_SRCDIR
	Reported by Thomas Hepper <Thomas.Hepper@icem.de>
	
	* client-src/sendbackup.c (backup_program): rename to
	gnutar_program, that's the name it should have had from the
	beginning
	* client-src/sendbackup-gnutar.c (backup_program): ditto

1998-10-31  Michael Schmitz <mschmitz@iname.com>

	* configure.in: let configure check whether strcasecmp is
 	present
	* common-src/strcasecmp.c: new file which contains a definition
	of strcasecmp
	* common-src/amanda.h: added code to declare strcasecmp in
 	case it's not declared in a standard header

1998-10-31  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* configure.in (snprintf): arrange that it is included in the
	distribution automatically
	* common-src/Makefile.am (EXTRA_DIST): removed, not needed

	* changer-src/Makefile.am (libexec_SCRIPTS): would only be enabled
	if WANT_CHG_SCSI

	* configure.in (NO_SCSI_CHANGER_MODE): chg-scsi does not support the
 	new FreeBSD 3.0 chio.h, so disable it if camlib.h is found.
	* docs/SYSTEM.NOTES (FreeBSD 3.0): add a note about this
	(SunOS 4.x): libtool will no longer find incorrect library versions

1998-10-30  John R. Jackson  <jrj@purdue.edu>

	* common-src/security.c (bsd_security_ok): change error message to
	reflect that it is a host name we were looking up rather than an
	address (also makes the two similar messages unique).

1998-10-28  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* docs/SYSTEM.NOTES: Debian 2's dump uses /var/lib/dumpdates 

1998-10-28  John R. Jackson  <jrj@purdue.edu>
