@@ -1,3 +1,7 @@
+1998-11-02  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
+
+	* server-src/amstatus.pl.in: initialize variable to remove warning.
+
 1998-11-02  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* client-src/Makefile.am (CLIENT_SCRIPTS): rename to
